Fikset genering av xml klasser + flytting av søknadsmapper